Fix misalignment of the contributor avatar on mobile views

--- a/src/scss/critical.scss
+++ b/src/scss/critical.scss
@@ -159,6 +159,9 @@ input[type=email].secondary {
 }
 
 .contributor {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     max-width: $width_min;
     padding-right: $size_200;
     padding-left: $size_200;
